--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@fortawesome/fontawesome-free": "^6.3.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "mdb-angular-ui-kit": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
